Fri Apr 11 01:51:13 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Svc_Conf_Tokens.h:
        * ace/svcconf.mpb:

          Fixing a fuzz build warning of a missing $Id$. Also, not all
          make(1)'s have $(MV), so changing mpb to use just "mv"

Thu Apr 10 22:32:58 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
        * ace/Service_Config.cpp:

          Fixing compile problems with single-thread-only builds - using
          the compiler's abilities (partial specialization) to generate
          appropriate code.

        * ace/Svc_Conf.h:
        * ace/Svc_Conf_Token_Table.h:
        * ace/Svc_Conf_Tokens.h:
        * ace/Svc_Conf_y.cpp:
        * ace/svcconf.mpb:

          Changes to fix compile problems related to versioned namespace
          use. Eliminated custom token file post-processing - replaced
          with a wrapper header file (yacc(1) is now producing
          Token_Table.h, which gets included in Tokens.h)

Thu Apr 10 14:42:04 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Svc_Conf.h:

          Adding YYSTYPE_IS_DECLARED to prevent yacc(1) from trying to use a
          trivial definition of YYSTYPE.

        * ace/Svc_Conf.y:

          Fixing an unused variable warning. Adding an YYSTYPE guard.

        * ace/Svc_Conf_Tokens.h:
        * ace/Svc_Conf_y.cpp:
        * ace/svcconf.mpb:

          Undefining YYSTYPE_IS_DECLARED at the bottom of Svc_Conf_Tokens.h
          prevents it from leaking and poluting the global namespace. This
          allows other yacc(1) based parsers to be used in ACE
          apps. Cleaning up and recording generated files.

Thu Apr 10 13:27:13 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_2980_Regression_Test.cpp:

           Fixed compilation issues and reversed the CAN_RUN_TEST check to
           get it to run on non-win32 and non-vxworks operating systems.
