@@ -1,9 +1,18 @@
+Fri Apr 11 15:26:08 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * tests/Bug_2980_Regression_Test.cpp:
+        * tests/run_test.lst:
+
+          Including config-lite.h: the driver is non-ACE but it still
+          needs to know platform-specific stuff, like threads usage,
+          etc.
+
 Fri Apr 11 01:51:13 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>
 
         * ace/Svc_Conf_Tokens.h:
         * ace/svcconf.mpb:
 
-          Fixing a fuzz build warning of a missing $Id$. Also, not all
+          Fixing a fuzz build warning of a missing $Id. Also, not all
           make(1)'s have $(MV), so changing mpb to use just "mv"
 
 Thu Apr 10 22:32:58 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>
